; ModuleID = '/home/carl/AnghaBench/radare2/libr/util/extr_pkcs7.c_r_pkcs7_free_signeddata.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/util/extr_pkcs7.c_r_pkcs7_free_signeddata.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @r_pkcs7_free_signeddata to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @r_pkcs7_free_signeddata(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %3 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %4 = icmp ne %struct.TYPE_3__* %3, null
  br i1 %4, label %5, label %21

5:                                                ; preds = %1
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 4
  %8 = call i32 @r_pkcs7_free_digestalgorithmidentifier(i32* %7)
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 3
  %11 = call i32 @r_pkcs7_free_contentinfo(i32* %10)
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 2
  %14 = call i32 @r_pkcs7_free_extendedcertificatesandcertificates(i32* %13)
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 1
  %17 = call i32 @r_pkcs7_free_certificaterevocationlists(i32* %16)
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = call i32 @r_pkcs7_free_signerinfos(i32* %19)
  br label %21

21:                                               ; preds = %5, %1
  ret void
}

declare dso_local i32 @r_pkcs7_free_digestalgorithmidentifier(i32*) #1

declare dso_local i32 @r_pkcs7_free_contentinfo(i32*) #1

declare dso_local i32 @r_pkcs7_free_extendedcertificatesandcertificates(i32*) #1

declare dso_local i32 @r_pkcs7_free_certificaterevocationlists(i32*) #1

declare dso_local i32 @r_pkcs7_free_signerinfos(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
